# AI-Wellness-Platform

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AI-Wellness-App-Sequence.drawio  CLAUDE.md  FEATURE-BREAKDOWN.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  REDESIGN-AUDIT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
AI-Wrapper-Service/: .dockerignore  Dockerfile
AI-service/: .gitignore  Makefile  README.md  pyproject.toml
AI-service/configs/: Modelfile  pipeline.yaml  safety_exemplars.json  training.yaml
AI-service/docs/: architecture-and-training.md  runpod-setup.md
AI-service/scripts/: convert_amod_counseling.py  convert_counsel_chat.py  convert_mentalchat16k.py  download_datasets.py  export_gguf.sh  filter_and_tag.py  merge_and_weight.py  schema.py  test_model.py  validate_dataset.py
auth-service/: AuthService.csproj  Dockerfile  Program.cs  appsettings.json
chat-service/: ChatService.sln  dockerfile
community-service/: dockerfile
docs/: ENGINEERING_DAY_RUNBOOK.md  FRONTEND_UI_UX_AUDIT.md
e2e/: auth.spec.ts  chat.spec.ts  community.spec.ts  helpers.ts  journal.spec.ts  redesign-a11y.spec.ts  redesign-auth.spec.ts  redesign-breath-assess.spec.ts  redesign-chat.spec.ts  redesign-community.spec.ts  redesign-home.spec.ts  redesign-journal.spec.ts  redesign-navshell.spec.ts  redesign-onboarding.spec.ts  redesign-playground.spec.ts  redesign-settings.spec.ts  (+2 more)
(+638 files in other folders)
